test/tests/stages/18_structures/invalid_struct_tags/for_loop_scope_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[49]:
  int
  identifier(main)
  (
  void
  )
  {
  void
  *
  identifier(ptr)
  ;
  for
  (
  ;
  ;
  (
  (
  struct
  identifier(s)
  *
  )
  identifier(ptr)
  )
  ->
  identifier(i)
  )
  {
  struct
  identifier(s)
  {
  int
  identifier(i)
  ;
  }
  ;
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  identifier(ptr)
  =
  &
  identifier(x)
  ;
  }
  }
